--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,7 +4,8 @@
   "version": "1.0",
   "manifest_version": 3,
   "permissions": [
-    "nativeMessaging"
+    "nativeMessaging",
+    "tabs"
   ],
   "background": {
     "service_worker": "dist/background.js"
